--- a/index.html
+++ b/index.html
@@ -447,15 +447,18 @@
             <div class="review-container">
                 <div class="review fade-in">
                     <p class="review-text">Дуже задоволена відвідуванням салону! Майстер Олена зробила чудовий релаксуючий масаж, після якого відчула себе абсолютно новою людиною. Обов'язково прийду ще!</p>
-                    <p class="review-author">Марія Петренко</p>
+                    <p class="review-author">Василь Руденко</p>
+                    <p class="review-author">Місто Кривий Ріг</p>
                 </div>
                 <div class="review fade-in">
                     <p class="review-text">Відмінний салон з професійним підходом. Ходив на лікувальний масаж спини після травми, і вже після кількох сеансів відчув значне покращення. Рекомендую!</p>
                     <p class="review-author">Олексій Коваленко</p>
+                    <p class="review-author">Місто Івано-Франківськ</p>
                 </div>
                 <div class="review fade-in">
                     <p class="review-text">Дякую за чудовий антицелюлітний масаж! Результат помітний вже після місяця регулярних відвідувань. Персонал дуже приємний, атмосфера затишна.</p>
-                    <p class="review-author">Тетяна Шевченко</p>
+                    <p class="review-author">Мирон198</p>
+                    <p class="review-author">Місто Павлоград</p>
                 </div>
             </div>
         </div>
